User can CRUD a ToDo inside a Project
Adaptation and creation of new versions of the activities of the ToDo for the Project requirements